Finished 1st foundations exercise

--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -1,3 +1,4 @@
+<! External CSS>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
+
+    <link rel="stylesheet" href="styles.css"> <!External CSS connection>
+
   </head>
+
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
